@@ -1,1 +1,7 @@
 # java-number-format
+
+
+-Duser.language=pt
+-Duser.region=BR
+-Duser.country=BR
+-Djava.locale.providers=HOST,JRE,SPI
